test/e2e/testdata/wasm-local.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: local-wasm-proxy
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
  provider:
    type: Kubernetes
    kubernetes:
      envoyDeployment:
        container:
          volumeMounts:
            - name: wasm-module
              mountPath: /etc/wasm
              readOnly: true
        pod:
          volumes:
            - name: wasm-module
              configMap:
                name: wasm-module-local
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: local-wasm-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: local-wasm-proxy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-local-wasm-source
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: local-wasm-gateway
  hostnames: ["www.example.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /wasm-local
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyExtensionPolicy
metadata:
  name: local-wasm-source-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-local-wasm-source
  wasm:
  - name: wasm-filter
    rootID: my_root_id
    code:
      type: Local
      local:
        filename: /etc/wasm/plugin.wasm
